<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/snapshot_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:contentDescription="@string/still_image_description"
            android:minWidth="320dp"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/snapshot_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:minLines="4"
            android:text="@string/snapshot_text_default"
            android:textColor="#FFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/snapshot_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapshot_ok_label" />

        <Button
            android:id="@+id/snapshot_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapshot_save_label" />

        <Button
            android:id="@+id/snapshot_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snapshot_view_label" />
    </LinearLayout>

</LinearLayout>
